# RayCaster

./: .gitignore  CMakeLists.txt  Camera.h  Canvas.cpp  Canvas.h  Color.cpp  Color.h  Computation.h  Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Intersection.h  Light.cpp  Lights.h  Material.h  MathUtils.cpp  MathUtils.h  MatrixBaseAddons.h  Mesh.cpp  Mesh.h  MeshSmooth.cpp  MeshSmooth.h  Pattern.h  Patterns.h  Plane.cpp  Plane.h  README.md  Ray.h  RayCaster.cpp  RayCaster.h  Shape.h  SmoothTriangle.cpp  SmoothTriangle.h  Sphere.cpp  Sphere.h  Transform.cpp  Transform.h  (+20 more)
apps/: redcircle.cpp
